remove background-attachment: fixed on small screens

--- a/assets/styles/development/css/style.css
+++ b/assets/styles/development/css/style.css
@@ -185,7 +185,6 @@ header {
 section .bg {
   background-size: cover;
   background-position: center;
-  background-attachment: fixed;
   position: absolute;
   left: 0;
   top: 0;
@@ -199,6 +198,9 @@ section .bg {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.4); }
+  @media (min-width: 600px) {
+    section .bg {
+      background-attachment: fixed; } }
 
 .js section,
 .js footer {
